# sunpy-contribution-statistics

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE.rst  README.md  genindex.html  index.html  objects.inv  py_API.html  pyproject.toml  ruff.toml  search.html  searchindex.js
_modules/: index.html
_sources/: py_API.rst.txt
cache/: 2015CS&D....8a4009S.txt  2020ApJ...890...68S.txt  2020JOSS....5.1832M.txt  ablog_pullRequests.txt  drms_commits.txt  drms_pullRequests.txt  mpl-animators_commits.txt  mpl-animators_pullRequests.txt  ndcube_commits.txt  ndcube_issues.txt  ndcube_pullRequests.txt  package-template_commits.txt  package-template_issues.txt  package-template_pullRequests.txt  pyflct_pullRequests.txt  radiospectra_commits.txt  radiospectra_issues.txt  streamtracer_commits.txt  streamtracer_pullRequests.txt  sunkit-dem_commits.txt  sunkit-dem_pullRequests.txt  sunkit-image_commits.txt  sunkit-image_issues.txt  sunkit-image_pullRequests.txt  sunkit-instruments_commits.txt  sunkit-instruments_pullRequests.txt  sunkit-magex_commits.txt  sunkit-magex_issues.txt  sunkit-magex_pullRequests.txt  sunkit-pyvista_commits.txt  sunkit-pyvista_pullRequests.txt  sunkit-spex_issues.txt  sunkit-spex_pullRequests.txt  sunpy-soar_commits.txt  sunpy-soar_issues.txt  sunpy-soar_pullRequests.txt  sunpy.org_commits.txt  sunpy.org_issues.txt  sunpy.org_pullRequests.txt  sunpy_commits.txt  (+4 more)
docs/: conf.py  index.rst
repo_stats/: citation_metrics.py  git_metrics.py  parameter_descriptions.json  parameters.json  plot.py  runner.py  user_stats.py  utilities.py
test/: tests.py
(+76 files in other folders)
